force-app/main/default/objects/Subscription_Order__c/fields/Utility_NMC_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Utility_NMC_Tariff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >This is the Sizing Method used to calculate the Subscription at the time this record was created.</description>
    <inlineHelpText
  >This is the Sizing Method used to calculate the Subscription at the time this record was created.</inlineHelpText>
    <label>Sizing Method</label>
    <referenceTo>Utility_NMC_Tariff__c</referenceTo>
    <relationshipLabel>Subscription Orders</relationshipLabel>
    <relationshipName>Subscription_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>