force-app/main/default/objects/Subscription_Order__c/fields/Utility_Number_of_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>Utility_Number_of_Decimal_Places__c</fullName>
    <description>This is the number of decimal places on the related utility record. It is static, and stamped at record creation. We need it in case the decimal places on Utility ever changes.</description>
    <inlineHelpText>This is the number of decimal places on the related utility record. It is static, and stamped at record creation.</inlineHelpText>
    <label>Utility: Number of Decimal Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>