force-app/main/default/objects/Subscription_Order__c/fields/Value_of_NMC__c.field-meta.xml
<CustomField>
    <fullName>Value_of_NMC__c</fullName>
    <description>This is the Value of NMC that was on the related NMC Tariff at the time the subscription order was created.</description>
    <inlineHelpText>This is the Value of NMC that was on the related NMC Tariff at the time the subscription order was created.</inlineHelpText>
    <label>Value of NMC</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>