force-app/main/default/objects/Subscription_Order__c/recordTypes/Subscription_Orders.recordType-meta.xml
<RecordType>
    <fullName>Subscription_Orders</fullName>
    <active>true</active>
    <label>Subscription Orders</label>
</RecordType>