force-app/main/default/objects/Subscription_Order__c/recordTypes/System_Change_Order.recordType-meta.xml
<RecordType>
    <fullName>System_Change_Order</fullName>
    <active>true</active>
    <label>System Change Order</label>
</RecordType>